--- a/app/src/main/res/layout/activity_vp2.xml
+++ b/app/src/main/res/layout/activity_vp2.xml
@@ -16,8 +16,7 @@
     <com.recker.flybanner.FlyBanner
         android:id="@+id/banner_1"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/img_default"/>
+        android:layout_height="200dp"/>
 
     <Button
         android:layout_width="match_parent"
@@ -29,7 +28,6 @@
     <com.recker.flybanner.FlyBanner
         android:id="@+id/banner_2"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/img_default"/>
+        android:layout_height="200dp"/>
 
 </LinearLayout>
