--- a/app/src/main/res/layout/activity_vp2.xml
+++ b/app/src/main/res/layout/activity_vp2.xml
@@ -1,33 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="加载本地图片"
-        android:padding="8dp"
-        android:textColor="@android:color/holo_red_light"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <com.recker.flybanner.FlyBanner
-        android:id="@+id/banner_1"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="加载本地图片"
+            android:padding="8dp"
+            android:textColor="@android:color/holo_red_light"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="加载网络图片"
-        android:padding="8dp"
-        android:textColor="@android:color/holo_red_light" />
+        <com.recker.flybanner.FlyBanner
+            android:id="@+id/banner_1"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
 
-    <com.recker.flybanner.FlyBanner
-        android:id="@+id/banner_2"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="加载网络图片"
+            android:padding="8dp"
+            android:textColor="@android:color/holo_red_light" />
 
-</LinearLayout>
+        <com.recker.flybanner.FlyBanner
+            android:id="@+id/banner_2"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="轮播gallery"
+            android:padding="8dp"
+            android:textColor="@android:color/holo_red_light" />
+
+        <com.recker.flybanner.FlyBanner
+            android:id="@+id/banner_3"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@android:color/black"/>
+
+        <!--RelativeLayout
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black">
+
+            <com.recker.flybanner.FlyBanner
+                android:id="@+id/banner_3"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                app:isShadow="true"/>
+        </RelativeLayout>-->
+    </LinearLayout>
+
+
+</ScrollView>
