新增加自动轮播的gallery效果的banner

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,11 @@
         android:layout_height="wrap_content"
         android:text="viewpager2-banner" />
 
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="viewpager3-banner" />
+
 
 </LinearLayout>
