--- a/app/src/main/res/layout/activity_vp3.xml
+++ b/app/src/main/res/layout/activity_vp3.xml
@@ -14,26 +14,15 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="加载本地图片"
-            android:padding="8dp"
-            android:textColor="@android:color/holo_red_light"/>
-
-        <com.recker.flybanner.FlyBanner
-            android:id="@+id/banner_1"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="加载网络图片"
+            android:text="轮播gallery"
             android:padding="8dp"
             android:textColor="@android:color/holo_red_light" />
 
         <com.recker.flybanner.FlyBanner
-            android:id="@+id/banner_2"
+            android:id="@+id/banner_3"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            android:background="@android:color/black"/>
 
     </LinearLayout>
 
