--- a/app/src/main/res/layout/activity_vp3.xml
+++ b/app/src/main/res/layout/activity_vp3.xml
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:text="轮播gallery"
+        android:textColor="@android:color/holo_red_light" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="轮播gallery"
-            android:padding="8dp"
-            android:textColor="@android:color/holo_red_light" />
+    <com.recker.flybanner.FlyBanner
+        android:id="@+id/banner_3"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@android:color/black" />
 
-        <com.recker.flybanner.FlyBanner
-            android:id="@+id/banner_3"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@android:color/black"/>
-
-    </LinearLayout>
+</LinearLayout>
 
 
-</ScrollView>
