添加一种recyclerView的banner效果 更改gallery效果在部分手机上转场动画的bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,17 @@
 
 
     <Button
+        android:id="@+id/btn0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="recyclerView0-banner"
+        android:textAllCaps="false"/>
+
+    <Button
         android:id="@+id/btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="recyclerView-banner"
+        android:text="recyclerView1-banner"
         android:textAllCaps="false"/>
 
     <Button
